--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+/developerdashboard/node_modules
+/developerdashboard/.pnp
 .pnp.js
 
 # testing
-/coverage
+/developerdashboard/coverage
 
 # production
-/build
+/developerdashboard/build
 
 # misc
 .DS_Store
